more imgur interaction polishing

--- a/Spirograph/gallery/index.html
+++ b/Spirograph/gallery/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div id="waiting-overlay">
-        <i class="fa fa-gear fa-spin fa-5x" style="color: #555"></i>
+        <i id="waiting-spinner" class="fa fa-gear fa-spin fa-5x"></i>
     </div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
