disabled uploading and gallery for IE 9, new build

--- a/Spirograph/gallery/index.html
+++ b/Spirograph/gallery/index.html
@@ -11,6 +11,13 @@
     <link href="styles/app.css" rel="stylesheet" />
 
     <title>Inspirograph</title>
+
+    <!--[if lt IE 10]>
+    <script type="text/javascript">
+        window.location = "old-browser.html";
+    </script>
+    <![endif]-->
+
 </head>
 
 <body class="spirograph">
