--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -78,7 +78,7 @@
             <i class="fa fa-2x fa-upload"></i>
         </div>
         <div class="cleared"></div>
-        <a id="gallery-button" href="./gallery/" class="toolbar-button btn btn-default">
+        <a id="gallery-button" href="./gallery/" class="toolbar-button btn btn-default" target="_blank">
             <i class="fa fa-2x fa-th"></i>
         </a>
         <div class="cleared"></div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="modal-body">
                     <div id="download-content">
-                        <p><a id="download-image-link" target="_blank">Click here to download your Inspirograph.</a></p>
+                        <p><a id="download-image-link" target="_blank">Click here to download your masterpiece.</a></p>
                     </div>
                 </div>
                 <div class="modal-footer">
