--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -317,6 +317,7 @@
     <script src="scripts/Shapes/BeamRotater.js"></script>
     <script src="scripts/Shapes/Beam.js"></script>
 
+    <script src="scripts/UI/for-local-testing.js"></script>
     <script src="scripts/UI/custom-color-picker.js"></script>
     <script src="scripts/UI/gear-options-selector.js"></script>
     <script src="scripts/UI/color-selector.js"></script>
