commented out amazon link

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -95,10 +95,10 @@
             <i class="fa fa-2x fa-mobile"></i>
         </button>
         <div class="cleared"></div>
-        <a id="real-thing-button" href="http://www.amazon.com/s/?_encoding=UTF8&camp=1789&creative=390957&field-keywords=spirograph&linkCode=ur2&tag=nathanfriendi-20&url=search-alias%3Dtoys-and-games&linkId=EDVL2MYQ2DDBKYCR" class="toolbar-button btn btn-default" target="_blank">
+        <!--<a id="real-thing-button" href="http://www.amazon.com/s/?_encoding=UTF8&camp=1789&creative=390957&field-keywords=spirograph&linkCode=ur2&tag=nathanfriendi-20&url=search-alias%3Dtoys-and-games&linkId=EDVL2MYQ2DDBKYCR" class="toolbar-button btn btn-default" target="_blank">
             <i class="fa fa-2x fa-shopping-cart"></i>
         </a>
-        <div class="cleared"></div>
+        <div class="cleared"></div>-->
         <button id="test-button" class="toolbar-button btn btn-default dom_munger-remove">
             <i class="fa fa-2x fa-flask"></i>
         </button>
