--- a/Spirograph/gallery/index.html
+++ b/Spirograph/gallery/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' class="dom_munger-ignore" />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' class="dom_munger-ignore" />
     <link class="dom_munger-ignore" rel="shortcut icon" href="../favicon.ico" />
 
     <link href="styles/app.css" rel="stylesheet" />
