--- a/Spirograph/gallery/index.html
+++ b/Spirograph/gallery/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/swipebox/src/js/jquery.swipebox.min.js"></script>
+    <script src="bower_components/swipebox/src/js/jquery.swipebox.js"></script>
     <script src="scripts/query-string.js"></script>
     <script src="scripts/format-date.js"></script>
     <script src="scripts/gallery.js"></script>
