Add meta description to index.html
Also small modification to download.html

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8" />
+    <meta name="description" content="A digital replica of the classic Spirograph toy. Written in TypeScript, using D3.js." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
